--- a/laravel5/composer.json
+++ b/laravel5/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.4",
         "laravelcollective/html": "^5.2",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "bestmomo/scafold": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
